--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body text=" green" background="r.jpe">
 <H1 align = "left"> The 8 RE's of Green Management</H1>
 <H1 >
- At one point or another weíve all heard about the "EIGHT REísî of green managment:-
+ At one point or another we‚Äôve all heard about the "EIGHT RE‚Äôs‚Äù of green managment:-
 <ul align="left"> 
 <li>reduce</li>
 <li>reuse</li>
@@ -14,7 +14,7 @@
 <li>reporpose</li>
 <li>renovate</li>
 </ul>  
-The goal of the eight REís is to prevent waste and conserve natural resources. Implementing such ìgreenî practices as the eight REís.
+The goal of the eight RE‚Äôs is to prevent waste and conserve natural resources. Implementing such ‚Äúgreen‚Äù practices as the eight RE‚Äôs.
 </H1>
 <h1 >
 For Prefix work check - <a href="research 2.html">PREFIX WORK </a>
