--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ img {
 <H1 align = "center" style="font-size:70px;color:green;"> The 8 RE's of Green Management</H1>
 
 <p style="font-size:30px;">
- At one point or another weíve all heard about the "EIGHT REísî of green managment:- </p>
+ At one point or another we‚Äôve all heard about the "EIGHT RE‚Äôs‚Äù of green managment:- </p>
 
 
 
 <div class="container">
 <div class="image">
-  <img src="8 rs final.png" alt="Nature" style="width:90%;" ALIGN=îleftî>
+  <img src="8 rs final.png" alt="Nature" style="width:90%;" ALIGN=‚Äùleft‚Äù>
   
   </div>
  
@@ -54,7 +54,7 @@ img {
 </div>
 </div>
 
-<p style="font-size:30px;">The goal of these eight REís is to prevent waste and conserve natural resources. We should implementing such ìgreenî practices as the eight REís.
+<p style="font-size:30px;">The goal of these eight RE‚Äôs is to prevent waste and conserve natural resources. We should implementing such ‚Äúgreen‚Äù practices as the eight RE‚Äôs.
 </p>
 
 <ul>
@@ -100,7 +100,7 @@ Now what mom said was true and the ans for it is :-
 
 <p style="font-size:30px;text-align:center;color:Blue;font-family:courier;"><strong> By :- GVS Vignesh</strong></p>
 <p style="font-size:30px;text-align:center;color:DodgerBlue;font-family:courier;"><strong> VIII H</strong></p>
-<p style="font-size:30px;text-align:center;color:DodgerBlue;font-family:courier;"><strong>Roll no:- 30</strong></p>
+<p style="font-size:30px;text-align:center;color:DodgerBlue;font-family:courier;"><strong>Roll no:- 08</strong></p>
 <p style="font-size:30px;text-align:center;color:DodgerBlue;font-family:courier;"><strong>House :- Topaz</strong></p>
 </body>
 </html>
