--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>The 8 RE's of Green Management</title>
+<title>The 8 RE&#39;s of Green Management</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 .container {
