--- a/masks ppkits.html
+++ b/masks ppkits.html
@@ -28,14 +28,14 @@ img {
 
 <h1 align = "center" style="font-size:40px;"> How masks, PPE kits and face shields are made?</H1>
 <body bgcolor = "#ff5721">
-<img src="image of mask.JPE" height="400" width="300"></img>
+<img src="image of mask.JPEG" height="400" width="300"></img>
 
 <h1> Masks</h1>
 
 <div class="container">
 
 <div class="image">
-<img src="mask image.png" style="width:250%;" ALIGN=”left”>
+<img src="mask image.png" style="width:250%;" ALIGN=â€leftâ€>
 </div>
 
 <div class="text">
@@ -48,7 +48,7 @@ img {
 <div class="container">
 
 <div class="image1">
-<img src="ppe kits.png" style="width:250%;" ALIGN=”left”></div>
+<img src="ppe kits.png" style="width:250%;" ALIGN=â€leftâ€></div>
 <div class="text">
 <p>PPE kits (Persoal Protective Equipment)are like a suit give to doctors when the visit the covid 19 patients.These kits include goggles, face shields, masks, gloves, coveralls or gowns, head covers and shoe covers.All those are made of plastic and reduce the risk of the person using them from contracting an infection.Polypropylene, a non-woven material that can be used only once, is largely used in making PPE kits.</p></div>
 </div>
@@ -57,7 +57,7 @@ img {
 <div class="container">
 
 <div class="image1">
-<img src="face sheild.png" style="width:250%;" ALIGN=”left”></div>
+<img src="face sheild.png" style="width:250%;" ALIGN=â€leftâ€></div>
 
 <div class="text">
 <p style="text-align:left;">Face sheilds has two parts lens plate and headband.Lens plate is made of Polycarbonate which is the material of choice for many helmet-style face shields because of its optical clarity and impact resistance.Headband's design is made to hold the lens plate and adjust it with the lenght of 1-in. </p>
