--- a/masks ppkits.html
+++ b/masks ppkits.html
@@ -28,7 +28,7 @@ img {
 
 <h1 align = "center" style="font-size:40px;"> How masks, PPE kits and face shields are made?</H1>
 <body bgcolor = "#ff5721">
-<img src="image of mask.JPE" height="400" width="300"></img>
+<img src="image of mask.jpe" height="400" width="300"></img>
 
 <h1> Masks</h1>
 
