--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ img {
 <li>REfuse</li>           
 <li>REpair</li>
 <li>REthink</li>
-<li>REporpose</li>
+<li>REpurpose</li>
 <li>REnovate</li>
 </ul>  
 </div>
